# cpa-audit

./: .gitignore  Dockerfile  README.md  authentication.py  docker-compose.yml  main.py  main.sh  pdf2chroma.py  pyproject.toml  requirements.txt  sample.py
.devcontainer/: devcontainer.json
.github/workflows/: auto-approve.yml
data/: CPA_AUDIT.csv  CPA_CO_ACT.csv  README.md
result/agg/: audit_H31_1_gpt-3.5-turbo-0125_rag_False_agg.csv  audit_H31_1_gpt-4-turbo-2024-04-09_rag_False_agg.csv  audit_H31_1_gpt-4o-2024-05-13_rag_False_agg.csv  audit_H31_2_Phi-3-mini-4k-Instruct_rag_False_agg.csv  audit_H31_2_gpt-3.5-turbo-0125_rag_False_agg.csv  audit_H31_2_gpt-3.5-turbo-0125_rag_True_agg.csv  audit_H31_2_gpt-4-turbo-2024-04-09_rag_False_agg.csv  audit_H31_2_gpt-4o-2024-05-13_rag_False_agg.csv  audit_R2_1_Phi-3-mini-4k-Instruct_rag_False_agg.csv  audit_R2_1_gpt-3.5-turbo-0125_rag_False_agg.csv  audit_R2_1_gpt-3.5-turbo-0125_rag_True_agg.csv  audit_R2_1_gpt-4-turbo-2024-04-09_rag_False_agg.csv  audit_R2_1_gpt-4o-2024-05-13_rag_False_agg.csv  audit_R2_2_Phi-3-mini-4k-Instruct_rag_False_agg.csv  audit_R2_2_gpt-3.5-turbo-0125_rag_False_agg.csv  audit_R2_2_gpt-3.5-turbo-0125_rag_True_agg.csv  audit_R2_2_gpt-4-turbo-2024-04-09_rag_False_agg.csv  audit_R2_2_gpt-4o-2024-05-13_rag_False_agg.csv  audit_R3_Phi-3-mini-4k-Instruct_rag_False_agg.csv  audit_R3_gpt-3.5-turbo-0125_rag_False_agg.csv  audit_R3_gpt-3.5-turbo-0125_rag_True_agg.csv  (+38 more)
src/: agents.py  authentication.py  cpa_agent.py  cpa_test.py  eval.py  eval_result.py  main.py  pdf2chroma.py  util.py
src/cpa_audit/: main.py
(+469 files in other folders)
