[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cpa-audit"
description = "My package description"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
authors =[
    {name = "tatsuki-masuda-code"}
]
version = "0.1.0"

[project.scripts]
cpa-audit = "cpa_audit:main"