[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cpa-test"
description = "My package description"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.8"
authors =[
    {name = "tatsuki-masuda-code"}
]
version = "0.1.0"

[project.scripts]
cpa-test = "cpa_test:main"